[package]
name = "woopra-component"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
serde_qs = "0.13.0"
wit-bindgen = "0.41.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
uuid = { version = "1.10.0", features = ["v4"] }
